Add connection to Firebase

--- a/index.html
+++ b/index.html
@@ -55,9 +55,15 @@
 
     </div>
     
-    <script src="scripts/chat.js"></script>
-    <script src="scripts/ui.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-firestore.js"></script>
     <script src="scripts/fb-config.js"></script>
+    <script>
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+    </script>
+    <script src="scripts/chat.js"></script>
+    <script src="scripts/ui.js"></script>    
     <script src="scripts/app.js"></script>
 </body>
 </html>
