--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
     </div>
     
+    <script src="http://cdn.date-fns.org/v1.9.0/date_fns.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-firestore.js"></script>
     <script src="scripts/fb-config.js"></script>
