--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <input type="submit" class="btn" value="update">
                 </div>
             </div>
-            <div class="update-mssg"></div>
+            <div class="update-mssg text-center my-2"></div>
         </form>
 
     </div>
